# challenge-data-engineering

./: .env  Dockerfile  README.md  pyproject.toml
app/: config.py  database.py  main.py
app/routers/: departments.py  employees.py  jobs.py  metrics.py
tests/: test_main.py
tests/files/: Jobs.csv  departments.csv  hired_employees.csv
